# aws_flask_celery

./: Dockerfile  Dockerfile_nginx  README.md  README_aws_service_discovery.md  README_ecs_nginx.md  add_target_group_to_load_balancer.py  docker-compose.yml  nginx.conf  pyproject.toml  task-definition.json  your.env
.github/workflows/: aws-ecs-deploy.yml
aws_files/: iam_policy_s3_access.json  iam_policy_ssm_access.json
proj/: __init__.py  app.py  celery_app.py  config.py  tasks.py
proj/static/: script.js  style.css
proj/templates/: index.html
